Fix skin name overflow to auto (from scroll)

--- a/god-skins.less
+++ b/god-skins.less
@@ -100,7 +100,7 @@ footer {
                 grid-area: name;
                 white-space: nowrap;
                 max-width: 150px;
-                overflow: scroll;
+                overflow: auto;
             }
             /* card full size: 750x1000 */
             a.skincard {
